resolve issue with invisible blog content

--- a/css/main.css
+++ b/css/main.css
@@ -79,9 +79,7 @@
 }
 .accordion .accordion-content {
   display: none;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.3s ease, padding 0.3s ease;
+  max-height: none;
   padding: 0 15px;
 }
 .accordion .accordion-content p {
@@ -95,7 +93,6 @@
 }
 .accordion.active .accordion-content {
   display: block;
-  max-height: 500px;
   padding: 15px;
 }
 
