--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -14,9 +14,9 @@
   
     .accordion-content {
       display: none;
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.3s ease, padding 0.3s ease;
+      max-height: none;
+      // overflow: hidden;
+      // transition: max-height 0.3s ease, padding 0.3s ease;
       padding: 0 15px;
   
       p {
@@ -32,7 +32,7 @@
   
     &.active .accordion-content {
       display: block;
-      max-height: 500px;
+      // max-height: 500px;
       padding: 15px;
     }
   }
